--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Calculator</title>
-  <link href="styles.css" rel="stylesheet">
+  <title>JavaScript Calculator</title>
+  <link href="style.css" rel="stylesheet">
   <script src="script.js" defer></script>
 </head>
 <body>
   <div class="calculator-grid">
     <div class="output">
-      <div data-previous-operand class="previous-operand"></div>
-      <div data-current-operand class="current-operand"></div>
+      <div data-previous-number class="previous-number"></div>
+      <div data-current-number class="current-number"></div>
     </div>
-    <button data-all-clear class="span-two">AC</button>
+    <button data-all-clear class="span-two">All Clear</button>
     <button data-delete>DEL</button>
     <button data-operation>÷</button>
     <button data-number>1</button>
