--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
       <div data-previous-number class="previous-number"></div>
       <div data-current-number class="current-number"></div>
     </div>
-    <button data-all-clear class="span-two">All Clear</button>
-    <button data-delete>DEL</button>
+    <button data-all-clear class="span-three">All Clear</button>
     <button data-operation>÷</button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
-    <button data-operation>*</button>
+    <button data-operation>*</button >
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
@@ -30,8 +29,8 @@
     <button data-number>9</button>
     <button data-operation>-</button>
     <button data-number>.</button>
-    <button data-number>0</button>
-    <button data-equals class="span-two">=</button>
+    <button data-number class="span-two">0</button>
+    <button data-equals>=</button>
   </div>
 </body>
 </html>
